# west_pacific-_petrochemical

./: .gitignore  README.md  pyproject.toml
backend/: 4.0.0  config.yaml  config.yaml.example  main.py  requirements.txt
backend/app/: config.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  agents.py  apps.py  auth.py  chat.py  datasets.py  files.py  models.py  users.py  workflows.py
backend/app/core/: __init__.py
backend/app/core/agent/: base_agent.py  memory.py  plan_agent.py  react_agent.py  tool_manager.py
backend/app/core/components/: __init__.py  registry.py  schemas.py
backend/app/core/llm/: __init__.py  base.py  claude.py  dispatcher.py  ollama.py  openai.py  openai_client.py  qwen.py  token_counter.py
backend/app/core/rag/: __init__.py  pipeline.py  reranker.py  retriever.py
backend/app/core/rag/chunkers/: __init__.py  fixed_chunker.py  recursive_chunker.py  semantic_chunker.py
backend/app/core/rag/embeddings/: local_embed.py  openai_embed.py
backend/app/core/rag/parsers/: __init__.py  csv_parser.py  docx_parser.py  html_parser.py  pdf_parser.py
backend/app/core/tools/: __init__.py  calculator.py  code_executor.py  mcp_client.py  web_search.py
backend/app/core/workflow/: README_COMPONENTS.md  __init__.py  dag_builder.py  executor.py  state_manager.py
backend/app/core/workflow/nodes/: __init__.py  agent_node.py  base_node.py  code_node.py  condition_node.py  end_node.py  http_node.py  llm_node.py  rag_node.py  start_node.py  tool_node.py
backend/app/infrastructure/cache/: redis_client.py
backend/app/infrastructure/database/: base.py  postgres.py
backend/app/infrastructure/database/migrations/: env.py
backend/app/infrastructure/mq/: celery_app.py
backend/app/infrastructure/storage/: minio_client.py
backend/app/infrastructure/vector_store/: base.py  chroma.py  milvus.py  qdrant.py
backend/app/models/db/: __init__.py  api_key.py  app.py  chat_model.py  conversation.py  dataset.py  document_chunk.py  user.py  workflow.py
backend/app/models/schema/: __init__.py  app_schema.py  chat_schema.py  dataset_schema.py  user_schema.py
backend/app/services/: app_service.py  auth_service.py  billing_service.py  chat_model_service.py  chat_service.py  dataset_service.py  file_service.py  user_service.py
backend/app/utils/: helpers.py  logger.py  security.py  validators.py
backend/docs/: API_AUTH_EXAMPLES.md  CHAT_API_JSON_SAMPLE.json
backend/scripts/: run_workflow_user_llm.py
backend/tests/: __init__.py  test_health.py  test_workflow_user_llm.py
backend/west_pacific_petrochemical_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deploy/: docker-compose.prod.yml  docker-compose.yml
docs/: CHAT_STREAM_TEST.md  DESIGN_AGENT_LOWCODE.md  PYCHARM_SETUP.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/router/: index.ts
frontend/src/views/: ChatWindow.vue  Dataset.vue  Studio.vue  Workflow.vue
