# ==============================================================
# pyproject.toml — AI Platform 项目统一配置文件
# 整合 requirements.txt + requirements-dev.txt
# ==============================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ==============================================================
# 📦 项目基本信息
# ==============================================================
[project]
name = "west-pacific-petrochemical-platform"
version = "0.1.0"
description = "基于大模型的AI应用平台"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "haoy", email = "hyzl156@126.com" }
]
keywords = ["ai", "llm", "rag", "langchain", "langgraph", "agent"]

# ==============================================================
# ✅ 生产依赖（原 requirements.txt）
# ==============================================================
dependencies = [
    # ── Web 框架 & 服务器 ──────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",

    # ── 认证 & 安全 ────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=43.0.0",
    "itsdangerous>=2.2.0",

    # ── 数据库 ORM & 迁移 ──────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "greenlet>=3.1.0",

    # ── 缓存 & 会话 ────────────────────────────────────────────
    "redis[hiredis]>=5.1.0",
    "aioredis>=2.0.1",

    # ── 异步任务队列 ───────────────────────────────────────────
    "celery[redis]>=5.4.0",
    "flower>=2.0.1",
    "kombu>=5.3.0",
    "billiard>=4.2.0",

    # ── LangChain & LangGraph 核心 ─────────────────────────────
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=1.0.0",
    "langsmith>=0.1.0",

    # ── LLM 模型提供商 ─────────────────────────────────────────
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "openai>=1.52.0",
    "anthropic>=0.36.0",
    "google-generativeai>=0.8.0",
    "ollama>=0.3.0",
    "dashscope>=1.20.0",
    "zhipuai>=2.1.0",
    "together>=1.3.0",
    "tiktoken>=0.8.0",

    # ── Embedding 向量化 ───────────────────────────────────────
    "sentence-transformers>=3.2.0",
    "langchain-huggingface>=0.1.0",
    "FlagEmbedding>=1.2.0",
    "transformers>=4.45.0",
    # GPU 版 torch：安装时使用 --extra-index-url 优先从 CUDA 源拉取，例如：
    # pip install . --extra-index-url https://download.pytorch.org/whl/cu131
    # 其他 CUDA 版本: cu118, cu124 等见 https://pytorch.org/get-started/locally
    "torch>=2.4.0",
    "einops>=0.8.0",

    # ── 向量数据库 ─────────────────────────────────────────────
    "pymilvus>=2.4.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.12.0",
    "pgvector>=0.3.0",

    # ── 文档解析（PDF）────────────────────────────────────────
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "pdfminer.six>=20231228",

    # ── 文档解析（Office）─────────────────────────────────────
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",

    # ── 文档解析（网页 & 标记语言）────────────────────────────
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "html2text>=2024.2.26",
    "markdown>=3.7",
    "markdownify>=0.13.0",

    # ── 文档解析（通用框架）───────────────────────────────────
    "unstructured[all-docs]>=0.15.0",
    "python-magic>=0.4.27",
    "chardet>=5.2.0",

    # ── OCR 图像识别 ───────────────────────────────────────────
    "pytesseract>=0.3.13",
    "pillow>=10.4.0",
    "easyocr>=1.7.0",

    # ── 文本处理 & NLP ─────────────────────────────────────────
    "nltk>=3.9.0",
    "jieba>=0.42.1",
    "langdetect>=1.0.9",
    "regex>=2024.9.11",

    # ── 全文检索 ───────────────────────────────────────────────
    "elasticsearch[async]>=8.15.0",
    "rank-bm25>=0.2.2",

    # ── 对象存储 ───────────────────────────────────────────────
    "minio>=7.2.0",
    "boto3>=1.35.0",
    "aioboto3>=13.1.0",

    # ── 配置管理 ───────────────────────────────────────────────
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",

    # ── 工具 & 通用库 ──────────────────────────────────────────
    "requests>=2.32.0",
    "aiohttp>=3.10.0",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "orjson>=3.10.0",
    "ujson>=5.10.0",
    "shortuuid>=1.0.13",
    "nanoid>=2.0.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "toml>=0.10.2",
    "cachetools>=5.5.0",
    "apscheduler>=3.10.4",

    # ── 可观测性 & 监控 ────────────────────────────────────────
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "sentry-sdk[fastapi]>=2.16.0",
    "loguru>=0.7.2",
]

# ==============================================================
# 🔧 可选依赖分组（pip install ".[分组名]"）
# ==============================================================
[project.optional-dependencies]

# 🧪 测试依赖（原 requirements.txt 测试部分独立出来）
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "faker>=30.0.0",
    "factory-boy>=3.3.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
]

# 🛠️ 开发工具依赖（原 requirements-dev.txt）
dev = [
    # 代码质量 & 格式化
    "black>=24.10.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "mypy>=1.11.0",
    "pylint>=3.3.0",
    "pre-commit>=4.0.0",
    "ruff>=0.7.0",

    # 类型存根
    "types-redis>=4.6.0",
    "types-requests>=2.32.0",
    "types-PyYAML>=6.0.0",
    "types-python-dateutil>=2.9.0",

    # 调试 & 开发体验
    "ipython>=8.28.0",
    "ipdb>=0.13.13",
    "watchfiles>=0.24.0",
    "rich>=13.9.0",
    "typer>=0.12.0",

    # 包含测试依赖（dev 包含 test）
    "west-pacific-petrochemical-platform[test]",
]

# 📖 文档生成依赖
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

# 🚀 一键安装全部（生产 + 测试 + 开发 + 文档）
all = [
    "west-pacific-petrochemical-platform[test]",
    "west-pacific-petrochemical-platform[dev]",
    "west-pacific-petrochemical-platform[docs]",
]

# ==============================================================
# 📂 包发现（setuptools 从 backend 目录找 app 包）
# ==============================================================
[tool.setuptools.packages.find]
where = ["backend"]

# ==============================================================
# ⚙️ 工具配置（原来需要单独 setup.cfg / .flake8 等文件）
# ==============================================================

# ── Black 代码格式化配置 ───────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | alembic/versions
)/
'''

# ── Ruff 代码检查配置 ──────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".git", "__pycache__", "alembic/versions", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long（black 已处理）
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── isort import 排序配置 ──────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

# ── Mypy 静态类型检查配置 ──────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_generics = false
warn_return_any = true
warn_unused_ignores = true
exclude = ["alembic/", "tests/"]

# ── Pytest 测试配置 ────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "-v",
]

# ── Coverage 测试覆盖率配置 ────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]